--- a/src/Components/Activities/Activities.css
+++ b/src/Components/Activities/Activities.css
@@ -10,4 +10,11 @@
     font-family: 'Playfair Display', serif;
     font-weight: 800;
     color: #6A8686;
+    padding-bottom: 20px;
+}
+.tasks-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    margin: 50px;
 }
