--- a/src/Components/Task/Task.css
+++ b/src/Components/Task/Task.css
@@ -4,8 +4,40 @@
     box-shadow: 0 2px 4px 0 gray, 0 4px 16px 0 gray;
     margin-bottom: 50px;
     border-radius: 20px;
+    position: relative;
 }
 .task-card img{
     width: 300px;
     border-radius: 20px;
+    margin: 10px;
+}
+.task-details{
+    margin: 0 15px;
+}
+.task-details h2{
+    margin-top: 5px;
+}
+.task-details h4{
+    margin-top: 0;
+}
+.task-details p{
+    margin-bottom: 8px;
+}
+.card-btn{
+    font-size: 18px;
+    font-weight: 600;
+    width: 80%;
+    height: 40px;
+    margin-left: 10%;
+    color: white;
+    background-color: #F39C12;
+    border: none;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 20px;
+    cursor: pointer;
+    transition: .5s;
+}
+.card-btn:hover{
+    background-color: #6E2C00;
 }
