--- a/src/Components/Activities/Activities.css
+++ b/src/Components/Activities/Activities.css
@@ -37,4 +37,8 @@
         flex-direction: column;
         align-items: center;
     }
+    .logo{
+        margin-left: 0;
+        text-align: center;
+    }
 }
